--- a/index.html
+++ b/index.html
@@ -8169,17 +8169,15 @@
 
 <body>
     <div id="root">
-        <section id="maxspVJbLKy0MdhO"
+        <section id=""
             style="position:relative;overflow:hidden;display:grid;align-items:center;grid-template-columns:auto 100rem auto;z-index:0;">
-            <div id="Fc5oJScCcdf1UwWk"
-                style="grid-area:1 / 1 / 2 / 4;display:grid;position:absolute;min-height:100%;min-width:100%;">
+            <!--Banner column-->
+            <div id="Fc5oJScCcdf1UwWk" 
+                style="grid-area:1 / 1 / 2 / 4;display:grid;position:absolute;min-height:100%;min-width:100%;background: linear-gradient(0deg, #0a7751 0%, #0e1e19 100%);"> 
                 <div id="W1MexgXqkbPZnsJ9" style="z-index:0;">
                     <div id="i1HhMj8HKkPuT8GB"
                         style="box-sizing:border-box;width:100%;height:100%;transform:rotate(0deg);">
                         <div id="cR3ocVAY6s15vvmz" style="width:100%;height:100%;opacity:1.0;">
-                            <div id="xepOH1mEcdYbgCcg"
-                                style="transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;background: linear-gradient(0deg, #0a7751 0%, #0e1e19 100%);">
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -9389,30 +9387,19 @@
 
         <a id="page-6" aria-hidden="true" style="visibility:hidden;"></a>
 
-        <section id="FJ22SphYba7hKo4M"
+        <section id=""
             style="position:relative;overflow:hidden;display:grid;align-items:center;grid-template-columns:auto 100rem auto;z-index:0;margin-top:-1px;">
-            <div id="vzwfz2ZCWen9FZGm"
-                style="grid-area:1 / 1 / 2 / 4;display:grid;position:absolute;min-height:100%;min-width:100%;">
-                <div id="JgVgQmswn7gbETGT" style="z-index:0;">
-                    <div id="aTGVXsZYk7Oq2wND"
-                        style="box-sizing:border-box;width:100%;height:100%;transform:rotate(0deg);">
-                        <div id="bXpXxxIU2n41H7Kr" style="width:100%;height:100%;opacity:1.0;">
-                            <div id="HTwTuX0VVmeZETBD"
-                                style="background-color:#0a3165;opacity:1.0;transform:scale(1, 1);width:100%;height:100%;overflow:hidden;position:relative;">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="Tyea2C1SHlp7K9KH" style="display:grid;position:relative;grid-area:1 / 2 / 2 / 3;">
+
+            
+            <div id="Tyea2C1SHlp7K9KH" style="display:grid;position:relative;grid-area:1 / 1 / 2 / 4;background: linear-gradient(0deg, #162239 0%, #024da1 100%);">
                 <div id="kBrEiz3wRP2IvHGX" style="z-index:1;">
                     <div id="IoXhkTprEPSVDjEk"
                         style="box-sizing:border-box;width:100%;height:100%;transform:rotate(0deg);">
                         <div id="CDC6eDnU6AGj21tA"
-                            style="opacity:1.0;display:flex;box-sizing:border-box;flex-direction:column;justify-content:flex-start;width:100%;height:100%;">
+                            style="opacity:1.0;display:flex;justify-content:center;align-items:center;width:100%;height:100%;">
                             <p id="PJcm6bMfmKKH8hs1"
-                                style="color:#ffffff;font-family:YAFdJjbTu24-1;line-height:1.45000725em;text-align:center;text-transform:none;letter-spacing:0em;">
-                                <span id="nbwssJky5f1nQgTj"
+                                style="color:#ffffff;font-family:YAFdJjbTu24-1;line-height:1.45000725em;text-align:center;text-transform:none;letter-spacing:0em;margin:0;">
+                                <span id=""
                                     style="color:#ffffff;font-style:normal;font-weight:500;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Copyright © 2024 - Teknik
                                     Geodesi Universitas Lampung</span>
                             </p>
@@ -9420,6 +9407,8 @@
                     </div>
                 </div>
             </div>
+
+            
         </section>
         <script src="js/939898b427480d700449229ff00dbb8a6f9f77442b532f697866e6914ab8843a.js" async="" nonce=""></script>
         <script src="js/b7d91262d3324ab0ad9ba844ac9c886c544fe3a4602d1979c31da4a1e2c1cea6.js" async="" nonce=""></script>
